# coros

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json
.github/workflows/: add_build.yml  clang_test.yml  gcc_test.yml  test_build.yml  tsan_build.yml
benchmarks/: CMakeLists.txt  coros_fib.h  coros_mat.h  main.cpp  openmp_fib.h  openmp_mat.h
benchmarks/tbb/: fib_tbb.h  main.cpp  mat_tbb.h
examples/: CMakeLists.txt  chaining.cpp  enqueueing.cpp  fib.cpp  simple_task_execution.cpp  waiting.cpp
include/: chain_tasks.h  constructor_counter.hpp  deque.h  enqueue_tasks.h  start_barrier.h  start_tasks.h  task.h  task_life_time.h  test_deque.h  thread_pool.h  wait_barrier.h  wait_tasks.h
tests/: CMakeLists.txt  chain_test.cpp  deque_test.cpp  enqueue_tasks_test.cpp  start_tasks_test.cpp  task_test.cpp  thread_pool_test.cpp  wait_barrier_test.cpp  wait_task_test.cpp
